3/30 main slate update

--- a/Baseball2024.html
+++ b/Baseball2024.html
@@ -6,6 +6,7 @@
     <script src="solver.js"></script>
     <script src="require.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div id="header">
@@ -45,10 +46,22 @@
                             <tr>
                                 <td>Top X Players:</td>
                                 <td>
-                                    <input type="number" id="num-top-plays" value="100">
+                                    <input type="number" id="num-top-plays" value="40">
                                 </td>
                                 <td>
-                                    <text>Omit teams:</text> <select id="in-play" class="team-select" onchange="moveTeam(this)"><option value="Choose..." selected>Choose...</option></select> Add back: <select onchange="moveTeam(this)" id="omitted" class="team-select"><option value="Choose..." selected>Choose...</option></select>
+                                    <div style="display:flex">
+                                        <div><text>Force stacks:</text><br><select id="force-stacks" class="team-select"  multiple></select></div>
+                                        <div style="vertical-align: middle;">
+                                            <button onclick="moveTeam('in-play', 'force-stacks')"><i class="fa fa-arrow-left"></i></button>
+                                            <button onclick="moveTeam('force-stacks', 'in-play')"><i class="fa fa-arrow-right"></i></button>
+                                        </div>
+                                        <div><text>Omit teams:</text><br> <select id="in-play" class="team-select" multiple></select></div>
+                                        <div style="vertical-align: middle;">
+                                            <button onclick="moveTeam('omitted', 'in-play')"><i class="fa fa-arrow-left"></i></button>
+                                            <button onclick="moveTeam('in-play', 'omitted')"><i class="fa fa-arrow-right"></i></button>
+                                        </div>
+                                        <div> Add back: <select  id="omitted" class="team-select" multiple></select></div>
+                                    </div>
                                 </td>
                                 <td>
                                     Variance: <input type="range" id="variance" min="0" max="100" value="50">
@@ -73,7 +86,7 @@
                                     </select>
                                 </td>
                                 <td>
-                                    Number of lineups: <input type="number" id="num-lineups" value="20">
+                                    Number of lineups: <input type="number" id="num-lineups" value="3">
                                     <button id="build-lineups" onclick="buildLineups()">Build Lineups</button>
                                 </td>
                                 <td>
@@ -86,7 +99,7 @@
                             <tr>
                                 <td>Min salary as pct of max</td>
                                 <td>
-                                    <input type="number" id="min-salary" value="98" min="0" max="100">
+                                    <input type="number" id="min-salary" value="95" min="0" max="100">
                                 </td>
                                 <td>
                                     Old lineups: <input type="file" id="previous-lineups" oninput="handleLineupscsv()">
