Added color by site and updated data

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <option value="oth">Top Odds To Hit</option>
             </select>
             <select id="site-select" onchange="prepareForSite()">
-                <option value="draftkings">DraftKings</option>
-                <option value="fanduel">FanDuel</option>
-                <option value="yahoo">Yahoo</option>
+                <option value="draftkings" style="background-color: #004400;
+                color: #AAFFAA">DraftKings</option>
+                <option value="fanduel" style="background-color:#000044; color: #AABBFF">FanDuel</option>
+                <option value="yahoo" style="background-color: #440044; color: #FFAAFF">Yahoo</option>
             </select>
             <table id="highlight-table">
                 
