--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <div id="build-constraints">
                         <table id="constraints-table">
                             <tr>
-                                <td>Top X Players:</td>
+                                <td>Deprecated field</td>
                                 <td>
-                                    <input type="number" id="num-top-plays" value="40">
+                                    <!-- Deprecated <input type="number" id="num-top-plays" value="40"> -->
                                 </td>
                                 <td>
                                     <div style="display:flex; justify-content: space-around;">
@@ -62,6 +62,19 @@
                                             <button class="move-team-btn" onclick="moveTeam('in-play', 'omitted')"><i class="fa fa-arrow-right"></i></button>
                                         </div>
                                         <div> Omitted: <br><select  id="omitted" class="team-select"></select></div>
+                                    </div>
+                                    <div style="display:flex; justify-content: space-around;">
+                                        <div><text>Force pitchers:</text><br><select id="force-pitchers" class="team-select"></select></div>
+                                        <div style="vertical-align: middle;">
+                                            <button class="move-team-btn" onclick="moveTeam('in-play-pitchers', 'force-pitchers')"><i class="fa fa-arrow-left"></i></button>
+                                            <button class="move-team-btn" onclick="moveTeam('force-pitchers', 'in-play-pitchers')"><i class="fa fa-arrow-right"></i></button>
+                                        </div>
+                                        <div><text>In Play:</text><br> <select id="in-play-pitchers" class="team-select"></select></div>
+                                        <div style="vertical-align: middle;">
+                                            <button class="move-team-btn" onclick="moveTeam('omitted-pitchers', 'in-play-pitchers')"><i class="fa fa-arrow-left"></i></button>
+                                            <button class="move-team-btn" onclick="moveTeam('in-play-pitchers', 'omitted-pitchers')"><i class="fa fa-arrow-right"></i></button>
+                                        </div>
+                                        <div> Omitted: <br><select  id="omitted-pitchers" class="team-select"></select></div>
                                     </div>
                                 </td>
                                 <td>
