--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div id="main">
             <div id="nav">
                 <button id="home" class="nav-button selected">Players</button>
-                <button id="teams" class="nav-button">Builder</button>
-                <button id="ownership" class="nav-button" onclick="updateOwnership()">Ownership</button>
+                <button id="teams" class="nav-button unselected">Builder</button>
+                <button id="ownership" class="nav-button unselected" onclick="updateOwnership()">Ownership</button>
             </div>
             <div id="content">  
                 <div id="players" class="show">
@@ -45,19 +45,19 @@
                     <div id="build-constraints">
                         <table id="constraints-table">
                             <tr>
-                                <td>Deprecated field</td>
+                                <!--<td>Deprecated field</td>
                                 <td>
-                                    <!-- Deprecated <input type="number" id="num-top-plays" value="40"> -->
-                                </td>
-                                <td>
+                                     Deprecated <input type="number" id="num-top-plays" value="40"> 
+                                </td>-->
+                                <td colspan="3">
                                     <div style="display:flex; justify-content: space-around;">
                                         <div><text>Force stacks:</text><br><select id="force-stacks" class="team-select"></select></div>
-                                        <div style="vertical-align: middle;">
+                                        <div class="btn-container">
                                             <button class="move-team-btn" onclick="moveTeam('in-play', 'force-stacks')"><i class="fa fa-arrow-left"></i></button>
                                             <button class="move-team-btn" onclick="moveTeam('force-stacks', 'in-play')"><i class="fa fa-arrow-right"></i></button>
                                         </div>
                                         <div><text>In Play:</text><br> <select id="in-play" class="team-select"></select></div>
-                                        <div style="vertical-align: middle;">
+                                        <div class="btn-container">
                                             <button class="move-team-btn" onclick="moveTeam('omitted', 'in-play')"><i class="fa fa-arrow-left"></i></button>
                                             <button class="move-team-btn" onclick="moveTeam('in-play', 'omitted')"><i class="fa fa-arrow-right"></i></button>
                                         </div>
@@ -65,12 +65,12 @@
                                     </div>
                                     <div style="display:flex; justify-content: space-around;">
                                         <div><text>Force pitchers:</text><br><select id="force-pitchers" class="team-select"></select></div>
-                                        <div style="vertical-align: middle;">
+                                        <div  class="btn-container">
                                             <button class="move-team-btn" onclick="moveTeam('in-play-pitchers', 'force-pitchers')"><i class="fa fa-arrow-left"></i></button>
                                             <button class="move-team-btn" onclick="moveTeam('force-pitchers', 'in-play-pitchers')"><i class="fa fa-arrow-right"></i></button>
                                         </div>
                                         <div><text>In Play:</text><br> <select id="in-play-pitchers" class="team-select"></select></div>
-                                        <div style="vertical-align: middle;">
+                                        <div  class="btn-container">
                                             <button class="move-team-btn" onclick="moveTeam('omitted-pitchers', 'in-play-pitchers')"><i class="fa fa-arrow-left"></i></button>
                                             <button class="move-team-btn" onclick="moveTeam('in-play-pitchers', 'omitted-pitchers')"><i class="fa fa-arrow-right"></i></button>
                                         </div>
@@ -78,7 +78,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    Variance: <input type="range" id="variance" min="0" max="100" value="50">
+                                    Variance: <input type="range" id="variance" min="-100" max="100" value="0">
                                 </td>
                                 <td>
                                     Allow batters vs pitchers?
