--- a/index.html
+++ b/index.html
@@ -128,15 +128,18 @@
                                         <option value="No Rules">No Rules</option>
                                         <option value="5-3">5-3</option>
                                         <option value="5-2-1">5-2-1</option>
+                                        <option value="5-x">5-x</option>
                                         <option value="4-4">4-4</option>
                                         <option value="4-3-1" selected>4-3-1</option>
                                         <option value="4-2-2">4-2-2</option>
+                                        <option value="4-x">4-x</option>
                                         <option value="3-3-2">3-3-2</option>
                                     </select>
                                 </td>
                                 <td>
                                     Number of lineups: <input type="number" id="num-lineups" value="3">
                                     <button id="build-lineups" onclick="buildLineups()">Build Lineups</button>
+                                    <button id="filter-lineups" onclick="filterLineups()">Filter Lineups</button>
                                 </td>
                                 <td>
                                     <button id="download-lineups" onclick="downloadLineups()">Download Lineups</button>
